[tool.poetry]
name = "pyfcomb"
version = "2.0.0"
description = "Frequency combinations made easy! pyfcomb allows you to compute possible combinations of frequencies from a given list of frequencies."
authors = ["Marco Müllner, <muellnermarco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.26.2"
pandas = "^2.1.3"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
